Update modal and view initial work

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -14,6 +14,13 @@
 
 </head>
 <body class="m-5 container">
+    <h1>Heading 1</h1>
+    <input type="text" class="em-datetimepicker px-2" data-settings="">   
+    
+    <h1>Heading 2</h1>
+    <input type="text" class="em-datetimepicker px-2" data-settings="">   
+
+    <h1>Heading 2</h1>
     <input type="text" class="em-datetimepicker px-2" data-settings="">    
 </body>
 </html>
