--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="http://localhost:4545/assets/style.css">
-    <!-- <script src="http://localhost:4545/assets/script.js" defer></script> -->
-    <script src="http://localhost:4545/assets/script.js" defer></script>
+    <script src="http://localhost:4545/assets/script.js"></script>
     
 
 </head>
@@ -19,8 +18,6 @@
     
     <h1>Heading 2</h1>
     <input type="text" class="em-datetimepicker px-2" data-settings="">   
-
-    <h1>Heading 2</h1>
-    <input type="text" class="em-datetimepicker px-2" data-settings="">    
+   
 </body>
 </html>
