--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -14,10 +14,13 @@
 </head>
 <body class="m-5 container">
     <h1>Heading 1</h1>
-    <input type="text" class="em-datetimepicker px-2" data-settings="">   
+    <input id="input1" type="text" class="emDatetimepicker px-2" data-settings="">   
     
     <h1>Heading 2</h1>
-    <input type="text" class="em-datetimepicker px-2" data-settings="">   
-   
+    <input id="input1" type="text" class="emDatetimepicker px-2" data-settings="">   
+   <script>
+        let input = document.querySelector('#input1');
+        emDatetimepicker.init(input);
+   </script>
 </body>
 </html>
