--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="http://localhost:4545/assets/style.css">
     <script src="http://localhost:4545/assets/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     
 
 </head>
@@ -19,8 +20,10 @@
     <h1>Heading 2</h1>
     <input id="input1" type="text" class="emDatetimepicker px-2" data-settings="">   
    <script>
-        let input = document.querySelector('#input1');
-        emDatetimepicker.init(input);
+        // let input = document.querySelector('#input1');
+        // emDatetimepicker.init(input);
+        emDatetimepicker.init($('#input1'));
+        console.log($('#input1'));;
    </script>
 </body>
 </html>
