--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -22,8 +22,11 @@
    <script>
         // let input = document.querySelector('#input1');
         // emDatetimepicker.init(input);
-        emDatetimepicker.init($('#input1'));
-        console.log($('#input1'));;
+        emDatetimepicker.init('#input1')
+        // .addListener('openpicker', (data) => {
+        //     console.log(data);
+        // } );
+        // console.log($('#input1'));
    </script>
 </body>
 </html>
