--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -32,7 +32,7 @@
         // });
         let options = {
             rangePicker: false,
-            // adjustWeekday: 2,
+            adjustWeekday: -2,
         }
 
         
