--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -33,6 +33,7 @@
         let options = {
             rangePicker: false,
             adjustWeekday: -2,
+            buttons: true,
         }
 
         
