--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -33,7 +33,7 @@
         let options = {
             rangePicker: false,
             adjustWeekday: 0,
-            buttons: true,
+            buttons: false,
         }
 
         
