--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -31,9 +31,11 @@
         //     console.log('data', data);
         // });
         let options = {
+            // startDate: '2024-01-05',
+            // endDate: '2024-01-05',
             rangePicker: false,
             adjustWeekday: 0,
-            buttons: false,
+            buttons: true,
         }
 
         
