--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -38,6 +38,7 @@
             // endDate: '2024-01-05',
             rangePicker: false,
             adjustWeekday: 1,
+            row: 2,
             buttons: true,
         }
 
