--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -37,7 +37,7 @@
         let options = {
             // startDate: '2024-01-05',
             // endDate: '2024-01-05',
-            rangePicker: false,
+            rangePicker: true,
             adjustWeekday: 1,
             row: 6,
             buttons: {
