--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -35,9 +35,9 @@
         
    
         let options = {
-            startDate: '1 Jan 2024', // 2024-01-02 || 
-            endDate: '2 Feb 2024', // 2024-02-02
-            rangePicker: false,
+            startDate: '01/01/2024', // 2024-01-02 || 1 Jan 2024 
+            endDate: '02/01/2024', // 2024-02-02 || 2 Feb 2024 || 
+            rangePicker: true,
             adjustWeekday: 0,
             row: 6,
             buttons: {
