--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -35,6 +35,8 @@
         
    
         let options = {
+            minDate: '01/06/2024',
+            maxDate: '01/08/2024',
             startDate: '01/01/2024', // 2024-01-02 || 1 Jan 2024 
             endDate: '02/01/2024', // 2024-02-02 || 2 Feb 2024 || 
             rangePicker: true,
