--- a/templates-html-server/timepicker.html
+++ b/templates-html-server/timepicker.html
@@ -6,384 +6,62 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <style>
-            * {
-  box-sizing: border-box;
-  cursor: url("https://user-images.githubusercontent.com/9720597/32018236-8e466e82-b9c9-11e7-84a0-038d861bfcd4.png") 32 32, default;
-}
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  font-size: 12px;
-}
-.inspiration {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  padding: 10px;
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Gill Sans', sans-serif;
-  font-size: 12px;
-  color: #969696;
-}
-.inspiration img {
-  width: 60px;
-}
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font: 16px 'Roboto', sans-serif;
-  transform: scale(1.3);
-}
-.center .date {
-  font-size: 30px;
-  font-weight: 300;
-}
-.center .date-picker {
-  display: flex;
-  padding: 50px 20px;
-  margin: 30px 0;
-  overflow: hidden;
-}
-.center .day,
-.center .month,
-.center .year {
-  position: relative;
-  height: 50px;
-  margin: 0 10px;
-  border-top: 1px solid #0522f3;
-  border-bottom: 1px solid #0522f3;
-  border-radius: 0;
-}
-.center .day:before,
-.center .month:before,
-.center .year:before,
-.center .day:after,
-.center .month:after,
-.center .year:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 80px;
-  height: 50px;
-  background-color: #fff;
-  opacity: 0.8;
-  pointer-events: none;
-  z-index: 1;
-}
-.center .day:before,
-.center .month:before,
-.center .year:before {
-  top: -51px;
-}
-.center .day:after,
-.center .month:after,
-.center .year:after {
-  bottom: -51px;
-}
-.center .day li,
-.center .month li,
-.center .year li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 50px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-.center .reset {
-  width: 100px;
-  height: 30px;
-  border-radius: 15px;
-  border: none;
-  outline: none;
-  color: #fff;
-  background-color: #2466fb;
-  box-shadow: 0 1px 10px -2px #2466fb;
-  font-weight: 300;
-}
-.center .reset:active {
-  transform: scale(0.95);
-}
-
+          *{
+            box-sizing: border-box;
+          }
+          .content{
+            margin: 100px;
+          }
+          .date-picker {
+            padding: 40px;
+            background-color: #fff;
+            box-shadow: 0px 8px 32px rgba(0, 0, 0, .16);
+            border-radius: 6px;
+            width: 300px;
+          }          
+          main.inputs {
+            display: flex;
+            justify-content: space-between;
+          }
+          main.inputs input[type=text] {
+            padding: 8px;
+            text-align: center;
+            width: 60px;
+          }
+          main.inputs input[type=text],
+          main.inputs input[type=text]:focus,
+          main.inputs input[type=text]:active,
+          main.inputs input[type=text]:focus:active
+           {
+            border-left: 1px solid #e2e2e2;
+            border-right: 1px solid #e2e2e2;
+            border-top: 1px solid #e2e2e2;
+            border: 1px solid #e2e2e2;
+            outline: none !important;
+          }
+          
         </style>
     </head>
 
     <body>
 
-        <div class="center" id="app">
-            <div class="date">16 Mar 2026</div>
+        <div class="content">
             <div class="date-picker">
-                <div class="dragdealer year">
-                    <ul class="handle"
-                        style="will-change: transform; transition: transform 0.1s ease 0s; transform: translateY(-750px);">
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-                        <li>10</li>
-                        <li>11</li>
-                        <li>12</li>
-                        <li>13</li>
-                        <li>14</li>
-                        <li>15</li>
-                        <li>16</li>
-                        <li>17</li>
-                        <li>18</li>
-                        <li>19</li>
-                        <li>20</li>
-                        <li>21</li>
-                        <li>22</li>
-                        <li>23</li>
-                        <li>24</li>
-                        <li>25</li>
-                        <li>26</li>
-                        <li>27</li>
-                        <li>28</li>
-                        <li>29</li>
-                        <li>30</li>
-                        <li>31</li>
-                    </ul>
-                </div>
-                <div class="dragdealer year">
-                    <ul class="handle"
-                        style="will-change: transform; transition: transform 0.11s ease 0s; transform: translateY(-100px);">
-                        <li>Jan</li>
-                        <li>Feb</li>
-                        <li>Mar</li>
-                        <li>Apr</li>
-                        <li>May</li>
-                        <li>Jun</li>
-                        <li>July</li>
-                        <li>Aug</li>
-                        <li>Sept</li>
-                        <li>Oct</li>
-                        <li>Nov</li>
-                        <li>Dec</li>
-                    </ul>
-                </div>
-                <div class="dragdealer year">
-                    <ul class="handle"
-                        style="will-change: transform; transition: transform 0.1s ease 0s; transform: translateY(-6300px);">
-                        <li>1900</li>
-                        <li>1901</li>
-                        <li>1902</li>
-                        <li>1903</li>
-                        <li>1904</li>
-                        <li>1905</li>
-                        <li>1906</li>
-                        <li>1907</li>
-                        <li>1908</li>
-                        <li>1909</li>
-                        <li>1910</li>
-                        <li>1911</li>
-                        <li>1912</li>
-                        <li>1913</li>
-                        <li>1914</li>
-                        <li>1915</li>
-                        <li>1916</li>
-                        <li>1917</li>
-                        <li>1918</li>
-                        <li>1919</li>
-                        <li>1920</li>
-                        <li>1921</li>
-                        <li>1922</li>
-                        <li>1923</li>
-                        <li>1924</li>
-                        <li>1925</li>
-                        <li>1926</li>
-                        <li>1927</li>
-                        <li>1928</li>
-                        <li>1929</li>
-                        <li>1930</li>
-                        <li>1931</li>
-                        <li>1932</li>
-                        <li>1933</li>
-                        <li>1934</li>
-                        <li>1935</li>
-                        <li>1936</li>
-                        <li>1937</li>
-                        <li>1938</li>
-                        <li>1939</li>
-                        <li>1940</li>
-                        <li>1941</li>
-                        <li>1942</li>
-                        <li>1943</li>
-                        <li>1944</li>
-                        <li>1945</li>
-                        <li>1946</li>
-                        <li>1947</li>
-                        <li>1948</li>
-                        <li>1949</li>
-                        <li>1950</li>
-                        <li>1951</li>
-                        <li>1952</li>
-                        <li>1953</li>
-                        <li>1954</li>
-                        <li>1955</li>
-                        <li>1956</li>
-                        <li>1957</li>
-                        <li>1958</li>
-                        <li>1959</li>
-                        <li>1960</li>
-                        <li>1961</li>
-                        <li>1962</li>
-                        <li>1963</li>
-                        <li>1964</li>
-                        <li>1965</li>
-                        <li>1966</li>
-                        <li>1967</li>
-                        <li>1968</li>
-                        <li>1969</li>
-                        <li>1970</li>
-                        <li>1971</li>
-                        <li>1972</li>
-                        <li>1973</li>
-                        <li>1974</li>
-                        <li>1975</li>
-                        <li>1976</li>
-                        <li>1977</li>
-                        <li>1978</li>
-                        <li>1979</li>
-                        <li>1980</li>
-                        <li>1981</li>
-                        <li>1982</li>
-                        <li>1983</li>
-                        <li>1984</li>
-                        <li>1985</li>
-                        <li>1986</li>
-                        <li>1987</li>
-                        <li>1988</li>
-                        <li>1989</li>
-                        <li>1990</li>
-                        <li>1991</li>
-                        <li>1992</li>
-                        <li>1993</li>
-                        <li>1994</li>
-                        <li>1995</li>
-                        <li>1996</li>
-                        <li>1997</li>
-                        <li>1998</li>
-                        <li>1999</li>
-                        <li>2000</li>
-                        <li>2001</li>
-                        <li>2002</li>
-                        <li>2003</li>
-                        <li>2004</li>
-                        <li>2005</li>
-                        <li>2006</li>
-                        <li>2007</li>
-                        <li>2008</li>
-                        <li>2009</li>
-                        <li>2010</li>
-                        <li>2011</li>
-                        <li>2012</li>
-                        <li>2013</li>
-                        <li>2014</li>
-                        <li>2015</li>
-                        <li>2016</li>
-                        <li>2017</li>
-                        <li>2018</li>
-                        <li>2019</li>
-                        <li>2020</li>
-                        <li>2021</li>
-                        <li>2022</li>
-                        <li>2023</li>
-                        <li>2024</li>
-                        <li>2025</li>
-                        <li>2026</li>
-                        <li>2027</li>
-                        <li>2028</li>
-                        <li>2029</li>
-                        <li>2030</li>
-                        <li>2031</li>
-                        <li>2032</li>
-                        <li>2033</li>
-                        <li>2034</li>
-                        <li>2035</li>
-                        <li>2036</li>
-                        <li>2037</li>
-                        <li>2038</li>
-                        <li>2039</li>
-                        <li>2040</li>
-                        <li>2041</li>
-                        <li>2042</li>
-                        <li>2043</li>
-                        <li>2044</li>
-                        <li>2045</li>
-                        <li>2046</li>
-                        <li>2047</li>
-                        <li>2048</li>
-                        <li>2049</li>
-                        <li>2050</li>
-                        <li>2051</li>
-                        <li>2052</li>
-                        <li>2053</li>
-                        <li>2054</li>
-                        <li>2055</li>
-                        <li>2056</li>
-                        <li>2057</li>
-                        <li>2058</li>
-                        <li>2059</li>
-                        <li>2060</li>
-                        <li>2061</li>
-                        <li>2062</li>
-                        <li>2063</li>
-                        <li>2064</li>
-                        <li>2065</li>
-                        <li>2066</li>
-                        <li>2067</li>
-                        <li>2068</li>
-                        <li>2069</li>
-                        <li>2070</li>
-                        <li>2071</li>
-                        <li>2072</li>
-                        <li>2073</li>
-                        <li>2074</li>
-                        <li>2075</li>
-                        <li>2076</li>
-                        <li>2077</li>
-                        <li>2078</li>
-                        <li>2079</li>
-                        <li>2080</li>
-                        <li>2081</li>
-                        <li>2082</li>
-                        <li>2083</li>
-                        <li>2084</li>
-                        <li>2085</li>
-                        <li>2086</li>
-                        <li>2087</li>
-                        <li>2088</li>
-                        <li>2089</li>
-                        <li>2090</li>
-                        <li>2091</li>
-                        <li>2092</li>
-                        <li>2093</li>
-                        <li>2094</li>
-                        <li>2095</li>
-                        <li>2096</li>
-                        <li>2097</li>
-                        <li>2098</li>
-                        <li>2099</li>
-                        <li>2100</li>
-                    </ul>
-                </div>
-            </div><button class="reset">Reset Date</button>
+                <main class="inputs">
+                    <input type="text" class="hour">
+                    <input type="text" class="month">
+                    <input type="text" class="second">
+                </main>  
+            </div>
         </div>
     </body>
+
+    <script>
+      let input = document.querySelector('input')
+      console.log(input);
+      input.addEventListener('scroll',(e)=>{
+        console.log(e);
+      })
+    </script>
 
 </html>
