--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -48,6 +48,9 @@
                 cancelBtn: 'Cancel',
             },
             monthShorts: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
+            // timePicker
+            timePicker: true,
+            minuteStep: 60,
         }
 
         function setDate() {
