--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -36,9 +36,9 @@
    
         let options = {
             // minDate: '01/06/2024',
-            maxDate: '01/08/2024',
-            startDate: '02/01/2024', // 2024-01-02 || 1 Jan 2024 
-            endDate: '01/01/2024', // 2024-02-02 || 2 Feb 2024 || 
+            // maxDate: '01/08/2024',
+            startDate: '01/22/2024', // 2024-01-02 || 1 Jan 2024 
+            endDate: '02/01/2024', // 2024-02-02 || 2 Feb 2024 || 
             rangePicker: true,
             adjustWeekday: 0,
             row: 5,
