--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -41,9 +41,8 @@
             endDate: '02/01/2024', // 2024-02-02 || 2 Feb 2024 || 
             rangePicker: true,
             adjustWeekday: 0,
-            row: 5,
             buttons: {
-                todayBtn: 'Today',
+                todayBtn: false,
                 applyBtn: 'Apply',
                 cancelBtn: 'Cancel',
             },
