--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -50,6 +50,7 @@
             // timePicker
             timePicker: true,
             minuteStep: 60,
+            use24Format: false,
         }
 
         function setDate() {
