--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -49,7 +49,7 @@
             monthShorts: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
             // timePicker
             timePicker: true,
-            minuteStep: 60,
+            minuteStep: 5,
             use24Format: false,
         }
 
@@ -61,13 +61,16 @@
         emDatetimepicker.init('#input1', options)
         $('#input1')
         .on('picker:open', ({detail: data}) => {
-            console.log('data', data);
+            console.log('picker:open', data);
         })
         .on('picker:change', ({detail: data}) => {
-            console.log('data', data);
+            console.log('picker:change', data);
         })
         .on('picker:cancel', ({detail: data}) => {
-            console.log('data', data);
+            console.log('picker:cancel', data);
+        })
+        .on('timepicker:change', ({detail: data}) => {
+            console.log('timepicker:change', data);
         })
    </script>
 </body>
