--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -39,7 +39,7 @@
             // maxDate: '01/08/2024',
             startDate: '01/22/2024', // 2024-01-02 || 1 Jan 2024 
             endDate: '02/01/2024', // 2024-02-02 || 2 Feb 2024 || 
-            rangePicker: true,
+            // rangePicker: true,
             adjustWeekday: 0,
             buttons: {
                 todayBtn: false,
@@ -49,7 +49,7 @@
             monthShorts: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
             // timePicker
             timePicker: true,
-            // onlyTimePicker: true,
+            onlyTimePicker: true,
             minuteStep: 5,
             use24Format: false,
         }
