--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -16,19 +16,19 @@
 <body class="m-5 container">
     <div class="row">
         <div class="col-6">
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label>Date And Time Picker</label>
                 <input id="input1" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label>Date Range And Time Picker</label>
                 <input id="input2" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label>Date Range Picker</label>
                 <input id="input3" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label>Only Time Picker</label>
                 <input id="input4" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
             </div>
