--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -31,8 +31,26 @@
             <div class="form-group mb-3">
                 <label>Only Time Picker</label>
                 <input id="input4" type="text" class="emDatetimepicker px-2 form-control" data-settings="">   
-            </div>
+            </div>       
         
+        </div>
+        <div class="col-6">
+            <div class="form-group mb-3">
+                <label>Date And Time Picker</label>
+                <div id="input_div_1" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
+            </div>
+            <div class="form-group mb-3">
+                <label>Date Range And Time Picker</label>
+                <div id="input_div_2" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
+            </div>
+            <div class="form-group mb-3">
+                <label>Date Range Picker</label>
+                <div id="input_div_3" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
+            </div>
+            <div class="form-group mb-3">
+                <label>Only Time Picker</label>
+                <div id="input_div_4" type="text" class="emDatetimepicker px-2 form-control" data-settings=""></div>
+            </div>       
         
         </div>
     </div>   
@@ -60,6 +78,7 @@
             use24Format: false,
         }
 
+        // left col-6
         emDatetimepicker.init('#input1', {
             // rangePicker: true,
             timePicker: true,
@@ -79,6 +98,31 @@
             // rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
+        });
+
+
+        // Right col-6
+        emDatetimepicker.init('#input_div_1', {
+            // rangePicker: true,
+            timePicker: true,
+            // onlyTimePicker: true,
+        });
+        emDatetimepicker.init('#input_div_2', {
+            rangePicker: true,
+            timePicker: true,
+            // onlyTimePicker: true,
+        });
+        emDatetimepicker.init('#input_div_3', {
+            rangePicker: true,
+            // timePicker: true,
+            // onlyTimePicker: true,
+        });
+        emDatetimepicker.init('#input_div_4', {
+            // rangePicker: true,
+            timePicker: true,
+            onlyTimePicker: true,
+            startTime: '2:00',
+            endTime: '20:00',
         });
 
 
