Update button text conditions

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -123,6 +123,7 @@
             onlyTimePicker: true,
             startTime: '2:00',
             endTime: '20:00',
+            dispayIn: 'bottom_right',
         });
 
 
