Update button text conditions

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -111,11 +111,20 @@
             rangePicker: true,
             timePicker: true,
             // onlyTimePicker: true,
+            dispayIn: 'inline_center',
         });
         emDatetimepicker.init('#input_div_3', {
             rangePicker: true,
             // timePicker: true,
             // onlyTimePicker: true,
+
+            dispayIn: "bottom_left",
+            // dispayIn: "bottom_right",
+            // dispayIn: "top_left",
+            // dispayIn: "top_right",
+            // dispayIn: "inline_left",
+            // dispayIn: "inline_right",
+            // dispayIn: "inline_center",
         });
         emDatetimepicker.init('#input_div_4', {
             // rangePicker: true,
@@ -123,7 +132,7 @@
             onlyTimePicker: true,
             startTime: '2:00',
             endTime: '20:00',
-            dispayIn: 'bottom_right',
+            // dispayIn: 'top_right',
         });
 
 
