working with color

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -124,7 +124,7 @@
             rangePicker: true,
             timePicker: true,
             // onlyTimePicker: true,
-            dispayIn: 'inline_center',
+            // dispayIn: 'inline_center',
         });
         emDatetimepicker.init('#input_div_3', {
             rangePicker: true,
@@ -146,6 +146,7 @@
             startTime: '2:00',
             endTime: '20:00',
             // dispayIn: 'top_right',
+            dispayIn: 'bottom_left',
         });
         emDatetimepicker.init('#input_div_5', {
             // rangePicker: true,
