--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -88,7 +88,7 @@
             // rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
-            dispayIn: 'bottom_left',
+            dispayIn: 'top_left',
         });
 
 
