Update button text conditions

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -89,6 +89,7 @@
             timePicker: true,
             onlyTimePicker: true,
             dispayIn: 'top_left',
+            minuteStep: 1,
         });
 
 
