Update button text conditions

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -85,7 +85,7 @@
             onlyTimePicker: true,
         });
         emDatetimepicker.init('#input5', {
-            // rangePicker: true,
+            rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
             dispayIn: 'top_left',
