Update button text conditions

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -89,7 +89,8 @@
             timePicker: true,
             onlyTimePicker: true,
             dispayIn: 'top_left',
-            minuteStep: 1,
+            // timePickerUi: 'classic',
+            minuteStep: 5,
         });
 
 
