working with color

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -83,13 +83,15 @@
             rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
+            timePickerUi: 'classic',
+            dispayIn: 'bottom_left',
         });
         emDatetimepicker.init('#input5', {
             rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
             dispayIn: 'top_left',
-            // timePickerUi: 'classic',
+            timePickerUi: 'default',
             minuteStep: 5,
         });
 
