working with color

--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -73,6 +73,11 @@
             rangePicker: true,
             timePicker: true,
             // onlyTimePicker: true,
+            // theme: 'dark',
+            dispayIn: 'bottom_left',
+            colors: {
+                primary_bg: '#12834f',
+            }
         });
         emDatetimepicker.init('#input3', {
             rangePicker: true,
@@ -92,7 +97,7 @@
             onlyTimePicker: true,
             dispayIn: 'top_left',
             timePickerUi: 'default',
-            minuteStep: 15,
+            minuteStep: 15,            
         });
 
 
