--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -63,8 +63,8 @@
             use24Format: false,
         }
 
-        let theme = 'light';
-        // let theme = 'dark';
+        // let theme = 'light';
+        let theme = 'dark';
         // left col-6
         emDatetimepicker.init('#input1', {
             theme,
@@ -95,6 +95,7 @@
             onlyTimePicker: true,
             timePickerUi: 'classic',
             dispayIn: 'bottom_left',
+            minuteStep: 15,  
         });
         emDatetimepicker.init('#input5', {
             theme,
