--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -101,7 +101,7 @@
             rangePicker: true,
             timePicker: true,
             onlyTimePicker: true,
-            displayIn: 'bottom_center',
+            displayIn: 'bottom_left',
             timePickerUi: 'default',
             minuteStep: 15,            
         });
