--- a/templates-html-server/index.html
+++ b/templates-html-server/index.html
@@ -119,7 +119,7 @@
             displayIn: 'bottom_left',
             timePickerUi: 'default',
             minuteStep: 15,            
-            timePickerButton: false,            
+            timePickerButtons: true,            
         });
 
 
